Fix for Alt+Left/Right page navigation with focus on radio buttons.

Added a condition for modifier state before handling keydown event.

BUG=599009

Review-Url: https://codereview.chromium.org/1944923002
Cr-Commit-Position: refs/heads/master@{#391621}

Former-commit-id: 336ebfae1a3dec77c73c4d545965941d935f1b99